sassi-macros/tests/lihaaf/compile_fail/watermark_bool.stderr
error[E0277]: the trait bound `bool: MonotonicWatermark` is not satisfied
 --> $DIR/watermark_bool.rs:8:24
  |
8 |     assert_watermark::<bool>();
  |                        ^^^^ the trait `MonotonicWatermark` is not implemented for `bool`
  |
  = help: the following other types implement trait `MonotonicWatermark`:
            (A, B)
            (A, B, C)
            (A, B, C, D)
            SystemTime
            i128
            i16
            i32
            i64
          and 8 others
note: required by a bound in `assert_watermark`
 --> $DIR/watermark_bool.rs:5:24
  |
5 | fn assert_watermark<T: MonotonicWatermark>() {}
  |                        ^^^^^^^^^^^^^^^^^^ required by this bound in `assert_watermark`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
